--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav
-        class="navbar navbar-expand-sm navbar-light bg-light"
+        class="navbar navbar-expand-sm navbar-light bg-success"
     >
         <div class="container">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -44,7 +44,62 @@
             </div>
         </div>
     </nav>
-    
-    <script src="bootstrap-5.3.6-dist/js/bootstrap.js"></script>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-auto bg-info-subtle">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 bg-info-subtle">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="auto bg-info-subtle">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Coluna da Imagem</h3>
+                        <img src="img/paisagem.jpg" alt="paisagem" style="max-width: 300px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-3 bg-info-subtle">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3 bg-info-subtle">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 bg-info-subtle">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="../bootstrap-5.3.6-dist/js/bootstrap.js"></script>
 </body>
 </html>
