--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav
-        class="navbar navbar-expand-sm navbar-light bg-light"
+        class="navbar navbar-expand-sm navbar-light bg-success"
     >
         <div class="container">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -44,7 +44,64 @@
             </div>
         </div>
     </nav>
-    
-    <script src="bootstrap-5.3.6-dist/js/bootstrap.js"></script>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-auto bg-primary">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem expedita natus aut nisi necessitatibus in illum laborum explicabo labore, error itaque alias iusto qui, ipsum illo reiciendis fugit. Quae, ratione.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 bg-secondary">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <img src="img/pato.jpg" alt="pato" style="max-width: 300px;">
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="auto bg-danger">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Coluna da Imagem</h3>
+                        <img src="img/paisagem.jpg" alt="paisagem" style="max-width: 300px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-3 bg-warning">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, sunt, nihil incidunt ratione vero id atque harum ullam nostrum quod corporis ducimus dolore unde tempora adipisci quidem ad? Est, facilis?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3 bg-info">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 bg-dark">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Title</h3>
+                        <img src="img/nuvemescura.jpg" alt="nuvem" style="max-width: 300px;">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi obcaecati dolorem esse dolores quod vero possimus culpa quisquam vitae, nam laborum repellendus at nihil, minima unde odio natus iste illum!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="../bootstrap-5.3.6-dist/js/bootstrap.js"></script>
 </body>
 </html>
